public class Contexto {
    public Contexto() {}
}