public class Medio {
    public Medio() {}
}