public class Resultado {
    public Resultado() {}
}