public class Silencio extends Interaccion {
    public Silencio() { }
}