public class Tema {
    public Tema() {}
}